--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@
 }
 
 body {
-  background-color: white;
   font-family: sans-serif;
   background-color: #dad7cd;
 }
@@ -34,12 +33,12 @@ body {
   height: 60px;
   border-radius: 5px;
   margin-bottom: 25px;
-  font-family: 'Cursed Timer ULiL';
+  font-family: 'Cursed Timer ULiL', sans-serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 70px;
   text-align: center;
-  color: #F94F6D;
+  color: #f94f6d;
   margin-top: 0;
 }
 
@@ -47,6 +46,7 @@ body {
   display: flex;
   flex-direction: column;
 }
+
 button {
   border: 2px solid #a8dadc;
   border-radius: 5px;
@@ -57,46 +57,46 @@ button {
   margin-bottom: 5px;
 }
 
-@media only screen and (min-width: 600px){
+@media only screen and (min-width: 600px) {
   .container {
-  background: linear-gradient(#1d3557, #457b9d);
-  width: 50%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 200px auto;
-  color: white;
-  padding: 20px 15px 65px 15px;
-  border-radius: 20px;
-  font-size: 20px;
-}
+    background: linear-gradient(#1d3557, #457b9d);
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 200px auto;
+    color: white;
+    padding: 20px 15px 65px 15px;
+    border-radius: 20px;
+    font-size: 20px;
+  }
 
-.score {
-  background: black;
-  width: 100px;
-  height: 100px;
-  border-radius: 5px;
-  margin-bottom: 25px;
-  font-family: 'Cursed Timer ULiL';
-  font-weight: 400;
-  font-size: 90px;
-  line-height: 127px;
-  text-align: center;
-  color: #F94F6D;
-  margin-top: 0;
-}
+  .score {
+    background: black;
+    width: 100px;
+    height: 100px;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    font-family: 'Cursed Timer ULiL', sans-serif;
+    font-weight: 400;
+    font-size: 90px;
+    line-height: 127px;
+    text-align: center;
+    color: #f94f6d;
+    margin-top: 0;
+  }
 
-.buttons {
-  display: flex;
-  flex-direction: row;
-}
+  .buttons {
+    display: flex;
+    flex-direction: row;
+  }
 
-button {
-  border: 2px solid #a8dadc;
-  border-radius: 5px;
-  background: transparent;
-  color: #a8dadc;
-  padding: 5px;
-  margin: 0 5px 0 5px;
-}
+  button {
+    border: 2px solid #a8dadc;
+    border-radius: 5px;
+    background: transparent;
+    color: #a8dadc;
+    padding: 5px;
+    margin: 0 5px 0 5px;
+  }
 }
